# HexaRAG

./: .claude-browser-check.js  .gitignore  CLAUDE.md  TASKS.md  aws-tracking.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/scripts/: audit_live_ui.py  evaluate_w4.py  load_structured_data.py  package_lambda_artifacts.py  sync_knowledge_base.py  upload_knowledge_base.py
backend/src/hexarag_api/: config.py  handler.py  main.py
backend/src/hexarag_api/api/: chat.py  health.py
backend/src/hexarag_api/models/: chat.py
backend/src/hexarag_api/services/: agent_runtime.py  audit_scoring.py  chat_service.py  evaluator.py  lambda_packaging.py  service_factory.py  session_store.py  tool_catalog.py  trace_formatter.py  ui_audit_matrix.py
backend/src/hexarag_api/tools/: analytics.py  live_monitoring.py  service_catalog.py
backend/src/monitoring_api/: data.py  main.py
backend/tests/: conftest.py  test_cors.py  test_frontend_build_config.py  test_health.py
backend/tests/api/: test_chat_contract.py
backend/tests/monitoring_api/: test_monitoring_routes.py
backend/tests/scripts/: test_sync_knowledge_base.py
backend/tests/services/: test_analytics.py  test_audit_scoring.py  test_chat_service.py  test_evaluator_inputs.py  test_lambda_packaging.py  test_session_store.py  test_trace_formatter.py  test_ui_audit_matrix.py
docs/: app-functionality.md  aws.md  local-dev.md  requirements.md
frontend/: Dockerfile  package-lock.json  package.json  playwright.live-audit.config.ts
frontend/src/: styles.css
(+51 files in other folders)
