[project]
name = "hexarag-api"
version = "0.1.0"
description = "HexaRAG FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.4",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "mangum>=0.21.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
